# tapegif-pro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tapegif_pro/: __init__.py  cli.py  formats.py  overlay.py  tui.py
tapegif_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_formats_unit.py  test_overlay.py
